# gitcord

./: .gitignore  PRIVACY.md  README.md  TOS.txt  pyproject.toml
gitcord/: main.py
gitcord/config/: __init__.py
gitcord/data/: database.py
gitcord/slash/: help.py  remotes.py  settings.py
gitcord/ui/: remotes.py  views.py
