[tool.poetry]
name = "gitcord"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = {git = "https://github.com/Pycord-Development/pycord", rev = "feat/ua"}
requests = "^2.32.3"
pillow = "^10.3.0"
firebase-admin = "^6.5.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
